# Recreating-99-core_ML_Projects

./: README.md
1-House Price Prediction/: .gitignore  README.md
1-House Price Prediction/docs/: usage.md
1-House Price Prediction/notebooks/: 0. extract zip.ipynb  1-initial-eda.ipynb  2-Feature-Engineering.ipynb  2-model-prototyping.ipynb  util.py
2. Customer Segmentation kmeans/: pyproject.toml
2. Customer Segmentation kmeans/1. Custom ML Function/: kmeans_v1.ipynb
2. Customer Segmentation kmeans/2. Use of Library/: Kmean-Implementation.ipynb
2. Customer Segmentation kmeans/Dataset/: Readme.md
