[project]
name = "segmentation-kmeans"
version = "0.1.0"
description = ""
authors = [
    {name = "Pratyush Kumar Bisoyi",email = "pratyushliku29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

